--- a/productos/templates/productos/productos.html
+++ b/productos/templates/productos/productos.html
@@ -20,19 +20,18 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="#!">Logo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Sobre Mi</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tienda</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#!">All Products</a></li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                                <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
+                                <li><a class="dropdown-item" href="#!">Zapatillas</a></li>
+                                <li><a class="dropdown-item" href="#!">Camisetas</a></li>
+                                <li><a class="dropdown-item" href="#!">Pantalones</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -70,18 +69,6 @@
                     {% endblock listado_productos %}
                 </div>
             </div>
-        </section>
-        <section>
-            <h1>Formulario - Agregar Producto</h1>
-            {% if prendas.errors %}
-            <p style="color: red;"> Estan Mal Los Datos</p>
-            {% endif %}
-            <form action="" method="POST">{% csrf_token %}
-                <table>
-                    {{ prendas.as_table }}
-                </table>
-                <input type="submit" value="Enviar">
-            </form>
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
