--- a/productos/templates/productos/create.html
+++ b/productos/templates/productos/create.html
@@ -1,18 +1,21 @@
 {% extends "productos/productos.html" %}
 
-{% block prendas %}
+{% block titulo %}  Zapatillas {% endblock titulo %}
 
-    {% for producto in productos %}
-        <h1>Formulario - Agregar Producto</h1>
-        {% if prendas.errors %}
-        <p style="color: red;"> Estan Mal Los Datos</p>
-        {% endif %}
-        <form action="" method="POST">{% csrf_token %}
-            <table>
-                {{ prendas.as_table }}
-            </table>
-            <input type="submit" value="Enviar">
-        </form>
-    {% endfor producto in productos %}
+{% block contenido %}
 
-{% endblock prendas %}
+<h1>Formulario - Agregar Producto</h1>
+
+    <form method="post">{% csrf_token %}
+
+        {{ formulario.as_p }}
+        
+        <input type="submit" value="Crear">
+    </form>}
+
+    {% for zapatilla in Zapatillas %}
+        <p style="color:blue"></p>
+    {% endfor %}
+
+
+{% endblock contenido %}
