--- a/productos/templates/productos/camisetas.html
+++ b/productos/templates/productos/camisetas.html
@@ -1,21 +1,71 @@
-{% extends "productos/productos.html" %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
 
-{% block titulo %}  Camisetas {% endblock titulo %}
+        {% load static %}
 
-{% block contenido %}
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Shop Homepage - Start Bootstrap Template</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="{% static 'productos/css/styles.css' %}" rel="stylesheet" />
+    </head>
+    <body>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container px-4 px-lg-5">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/productos/">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Sobre Mi</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tienda</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="/productos/zapatillas/">Zapatillas</a></li>
+                                <li><a class="dropdown-item" href="/productos/camisetas/">Camisetas</a></li>
+                                <li><a class="dropdown-item" href="/productos/pantalones/">Pantalones</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Header-->
+        <header class="bg-dark py-5">
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="text-center text-white">
+                    <h1 class="display-4 fw-bolder">Shop in style</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                </div>
+            </div>
+        </header>
 
-<h1>Formulario - Agregar Producto</h1>
-
-    <form method="post">{% csrf_token %}
-
-        {{ formulario.as_p }}
-        
-        <input type="submit" value="Crear">
-    </form>}
-
-    {% for camisetas in Camisetas %}
-        <p style="color:blue"></p>
-    {% endfor %}
-
-
-{% endblock contenido %}
+        <div>
+            <h1>Formulario Camisetas - Agregar Producto</h1>
+            
+                <form " method="post">{% csrf_token %}
+            
+                    {{ formulario.as_p }}
+                    
+                    <input type="submit" value="Crear">
+                </form>
+                {% for camiseta in Camisetas %}
+                    <p style="color:blue"></p>
+                {% endfor %}
+        <!-- Footer-->
+        <footer class="py-5 bg-dark">
+            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+        </footer>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="{% static 'productos/js/scripts.js' %}"></script>
+    </body>
+</html>
