--- a/productos/templates/productos/zapatillas.html
+++ b/productos/templates/productos/zapatillas.html
@@ -48,7 +48,7 @@
         </header>
 
         <div>
-            <h1>Formulario Pantalones - Agregar Producto</h1>
+            <h1>Formulario Zapatillas - Agregar Producto</h1>
             
                 <form " method="post">{% csrf_token %}
             
@@ -56,7 +56,7 @@
                     
                     <input type="submit" value="Crear">
                 </form>
-                {% for pantalon in Pantalones %}
+                {% for Zapatillas in zapatilla %}
                     <p style="color:blue"></p>
                 {% endfor %}
         <!-- Footer-->
