--- a/productos/templates/productos/pantalones.html
+++ b/productos/templates/productos/pantalones.html
@@ -56,9 +56,11 @@
                     
                     <input type="submit" value="Crear">
                 </form>
-                {% for pantalon in Pantalones %}
-                    <p style="color:blue"></p>
+
+                {% for p in pantalon %}
+                    <li>{{p}}</li>
                 {% endfor %}
+
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
