--- a/productos/templates/productos/pantalones.html
+++ b/productos/templates/productos/pantalones.html
@@ -25,8 +25,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/productos/">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Sobre Mi</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/auth/login/">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/auth/register/">Register</a></li>
+                        {% if request.user.username %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tienda</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -35,6 +34,10 @@
                                 <li><a class="dropdown-item" href="/productos/pantalones/">Pantalones</a></li>
                             </ul>
                         </li>
+                        <a class="btn btn-primary" href="/auth/logout"> Logout </a>
+                        {% else %}
+                        <li class="nav-item"><a class="btn btn-primary" href="/auth/login"> Login </a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
