--- a/productos/templates/productos/agregar_avatar.html
+++ b/productos/templates/productos/agregar_avatar.html
@@ -25,6 +25,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/productos/">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Sobre Mi</a></li>
+                        {% if request.user.username %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tienda</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -35,9 +36,19 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="/productos/edit">Perfil</a></li>
                         <a class="btn btn-primary" href="/auth/logout"> Logout </a>
+
+                        {% else %}
+                        <li class="nav-item"><a class="btn btn-primary" href="/auth/login"> Login </a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
+            {% if request.user.username %}
+                <div class="container text-center">
+                    <p>Buenas {{request.user.first_name}}</p>
+                    
+                </div>
+            {% endif %}
         </nav>
         <!-- Header-->
         <header class="bg-dark py-5">
@@ -48,22 +59,21 @@
                 </div>
             </div>
         </header>
-
+            <h2>
+                {{ request.user.username}}
+            </h2>
         <div>
-            <h1>Formulario Camisetas - Agregar Producto</h1>
+            <img src="{{imagen}}" width="100" height="100" alt="Avatar">
+        </div>
+        <div>
+            {% block contenido %}
+            <form method="post" enctype="multipart/form-data">{% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Cargar">
+            </form>
+            {% endblock %}
             
-                <form " method="post">{% csrf_token %}
-            
-                    {{ formulario.as_p }}
-                    
-                    <input type="submit" value="Crear">
-                </form>
-
-                {% for p in camiseta %}
-                    <li>{{p}}</li> <a href="{%url 'EliminarCamisetas' p.id %}">Eliminar</a>
-                    <a href="{%url 'EditarCamisetas' p.id %}">Editar</a>
-                {% endfor %}
-
+        </div>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
