--- a/productos/templates/productos/pantalones.html
+++ b/productos/templates/productos/pantalones.html
@@ -34,6 +34,7 @@
                                 <li><a class="dropdown-item" href="/productos/pantalones/">Pantalones</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item"><a class="nav-link" href="/productos/edit">Perfil</a></li>
                         <a class="btn btn-primary" href="/auth/logout"> Logout </a>
                         {% else %}
                         <li class="nav-item"><a class="btn btn-primary" href="/auth/login"> Login </a></li>
