--- a/productos/templates/productos/zapatillas.html
+++ b/productos/templates/productos/zapatillas.html
@@ -33,6 +33,7 @@
                                 <li><a class="dropdown-item" href="/productos/pantalones/">Pantalones</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item"><a class="nav-link" href="/productos/edit">Perfil</a></li>
                         <a class="btn btn-primary" href="/auth/logout"> Logout </a>
                     </ul>
                 </div>
