--- a/productos/templates/productos/about.html
+++ b/productos/templates/productos/about.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/productos/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/productos/about/">Sobre Mi</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/productos/about/!">Sobre Mi</a></li>
                         {% if request.user.username %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tienda</a>
@@ -59,35 +59,18 @@
                 </div>
             </div>
         </header>
-            <h2>
-                {{ request.user.username}}
-            </h2>
         <div>
-            <img src="{{imagen}}" width="100" height="100" alt="Avatar">
+            <p>
+                Buenas, soy Enzo Calviño.
+                <br>
+                Soy estudiante de Ingenieria Informatica y empeze a interesarme en la programacion despues de hacer 1 diplomatura en Ciberseguridad y otra en Desarrollo de Aplicaciones Seguras en la UNSTA. 
+                <br>
+                Me anote en los cursos de Coder para poder aprender lo mas que pueda de este mundo. Ademas me gustaria especializarme en la backend y mas precisamente en Python y Django. Es muy interesante todo lo que te prensentan y todo lo que podes investigar y probar, me siento muy comodo con este lenguaje en especifico.
+                <br>
+                Este es mi proyecto  Final
+
+            </p>
         </div>
-        <div>
-            <form method="get">
-                {{ formulario.as_p }}
-                <input type="submit" value="Buscar">
-            </form>
-        </div>
-        <!-- Section-->
-        <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    {% block listado_productos %}
-                    {% endblock listado_productos %}
-                </div>
-            </div>
-        </section>
-        <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
-                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                    {% block listado_camisetas %}
-                    {% endblock listado_camisetas %}
-                </div>
-            </div>
-        </section>
         <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
