--- a/productos/templates/productos/zapatillas.html
+++ b/productos/templates/productos/zapatillas.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Shop Homepage - Start Bootstrap Template</title>
+        <title>Zapatillas</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -38,13 +38,19 @@
                     </ul>
                 </div>
             </div>
+            {% if request.user.username %}
+            <div class="container text-center">
+                <p>Buenas {{request.user.first_name}}</p>
+                
+            </div>
+        {% endif %}
         </nav>
         <!-- Header-->
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                    <h1 class="display-4 fw-bolder">Shop NBA</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">La Mejor Ropa de Basket</p>
                 </div>
             </div>
         </header>
