--- a/productos/templates/productos/about.html
+++ b/productos/templates/productos/about.html
@@ -7,8 +7,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Shop Homepage - Start Bootstrap Template</title>
+        <meta name="author" content="Enzo Calviño" />
+        <title>Sobre Mi</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="/productos/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/productos/about/!">Sobre Mi</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/productos/about/">Sobre Mi</a></li>
                         {% if request.user.username %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Tienda</a>
@@ -54,8 +54,8 @@
         <header class="bg-dark py-5">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="text-center text-white">
-                    <h1 class="display-4 fw-bolder">Shop in style</h1>
-                    <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
+                    <h1 class="display-4 fw-bolder">Shop NBA</h1>
+                    <p class="lead fw-normal text-white-50 mb-0">La Mejor Ropa de Basket</p>
                 </div>
             </div>
         </header>
